--- a/PlaceAutoComplete/src/main/res/layout/fragment_place_auto_complete.xml
+++ b/PlaceAutoComplete/src/main/res/layout/fragment_place_auto_complete.xml
@@ -36,7 +36,6 @@
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_place" />
 
-            <requestFocus/>
             <EditText
                 android:id="@+id/search_box"
                 android:layout_width="match_parent"
@@ -48,6 +47,8 @@
                 android:gravity="center_vertical"
                 android:hint="@string/search_box_hint"
                 android:maxLines="1"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
                 android:textColor="#6e6e6e"
                 android:textSize="16sp" />
 
