--- a/PlaceAutoComplete/src/main/res/layout/auto_complete_address_item.xml
+++ b/PlaceAutoComplete/src/main/res/layout/auto_complete_address_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.library.outlander.placeautocomplete.AutoCompletePlaceFragment.PlaceDataItemViewModel" />
+            type="com.library.outlander.placeautocomplete.AutoCompletePlaceFragment.deprecated.PlaceDataItemViewModel" />
     </data>
 
     <RelativeLayout
